# wise-parakeet

./: .env  README.md  pyproject.toml  requirements.txt
src/wise_parakeet/ai/: get_enron_bow.py  train.py  utils.py
src/wise_parakeet/app/: __init__.py  database.py  run.py
src/wise_parakeet/app/data/: foo.sqlite  schema.sql
src/wise_parakeet/app/routes/: api.py
src/wise_parakeet/app/static/css/: styles.css
src/wise_parakeet/app/static/html/: about.html  index.html
src/wise_parakeet/app/static/js/: api.js  index.js  results.js
src/wise_parakeet/app/templates/: result.html
